name:                fsatracetest
version:             0.1.0.0
author:              Jorge Acereda
maintainer:          jacereda@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable dumpargs
    main-is: DumpArgs.hs
    ghc-options: -main-is DumpArgs.main
    build-depends: base
    hs-source-dirs: .
    default-language:    Haskell2010

test-suite fsatrace-test
    main-is: Test.hs
    ghc-options: -main-is Test.main
    type: exitcode-stdio-1.0
    ghc-options: -Wall
    build-depends: base
                  , QuickCheck
                  , filepath
                  , directory
                  , temporary
                  , extra
                  , process
                  , transformers
    hs-source-dirs: .
    default-language:    Haskell2010
